# id_generator

./: .gitignore  FONT_GUIDE.md  README.md  TEMPLATE_GUIDE.md  constraits.py  converter.py  document_generator.py  id_card_process.py  id_first_page.py  id_second_page.py  logger_config.py  main.py  nuitka-crash-report.xml  passport_infopage.py  pyproject.toml  requirements.txt  sample-passport.yml
libs/: constraits.py  id_card_process.py  mrzgenerater.py
output/: .gitkeep
photos/: .gitkeep
resources/: .gitkeep
schema/: __init__.py  loader.py  schema.py  validators.py
temp/: .gitkeep
templates/: .gitkeep
